--- a/AiMovieCast/ios/AiMovieCast/Info.plist
+++ b/AiMovieCast/ios/AiMovieCast/Info.plist
@@ -36,6 +36,17 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UILaunchImages</key>
+	<dict>
+		<key>UILaunchImageMinimumOSVersion</key>
+		<string>8.0</string>
+		<key>UILaunchImageName</key>
+		<string>LaunchImage</string>
+		<key>UILaunchImageOrientation</key>
+		<string>Landscape</string>
+		<key>UILaunchImageSize</key>
+		<string>{768, 1024}</string>
+	</dict>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
